@@ -1,6 +1,8 @@
 25.jun (ws)
       - fix regression introduced in fixing #6138
       - fix #5903: Duration arithmentic with longa and brevis
+       (la)
+      - fix #6079: problem in multimeasure rests with 2 staves score
 24.jun (ws)
       - fix #6138: crash on creating new score (after some steps)
       - fix #6076: crash on play a new score after exiting a playing score
